--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
 	"dependencies": {
 		"@opennextjs/cloudflare": "^1.3.0",
 		"next": "15.4.6",
+		"protobufjs": "^7.5.4",
 		"react": "19.1.0",
-		"react-dom": "19.1.0"
+		"react-dom": "19.1.0",
+		"rfc4648": "^1.5.4"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4",
