--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	"dependencies": {
 		"@opennextjs/cloudflare": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.7",
-		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-separator": "^1.1.8",
+		"@radix-ui/react-slot": "^1.2.4",
 		"@radix-ui/react-tabs": "^1.1.13",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -24,6 +25,7 @@
 		"protobufjs": "^7.5.4",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
+		"react-qr-code": "^2.0.18",
 		"rfc4648": "^1.5.4",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1"
