--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@types/node": "^20.19.24",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"html5-qrcode": "^2.3.8",
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5",
