proper use of cloudflare KV

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,1 @@
-ACCOUNT_ID=cloudflare_account_id
-KV_ID=cloudflare_kv_id
-KV_KEY=cloudflare_kv_key
-CLOUDFLARE_TOKEN=cloudflare_api_token
+NODE_ENV=production
