--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,7 +17,13 @@
 	},
 	"observability": {
 		"enabled": true
-	}
+	},
+	"kv_namespaces": [
+		{
+			"binding": "COUNTER_KV",
+			"id": "4be9160ce06a46b0848ff70594a73372"
+		}
+	]
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
