--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.552.0",
     "next": "16.1.5",
     "next-themes": "^0.4.6",
+    "nextjs-turnstile": "^1.0.3",
     "protobufjs": "^7.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
