--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 NODE_ENV=production
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=1x00000000000000000000AA
+TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
